fix height ModalWindow now it don't overflow

--- a/src/components/ModalWindow/ModalWindow.scss
+++ b/src/components/ModalWindow/ModalWindow.scss
@@ -12,12 +12,12 @@
     top: 0;
     bottom: 0;
     z-index: 4;
-    padding-top: 80px;
+    padding-top: 40px;
   }
 
   &__content {
     width: 716px;
-    height: 100%;
+    height: 90%;
     position: fixed;
 
     overflow-y: scroll;
