--- a/src/components/RestaurantPage/RestaurantPage.scss
+++ b/src/components/RestaurantPage/RestaurantPage.scss
@@ -219,6 +219,7 @@
 
   box-sizing: border-box;
   border: 1px solid #e0e0e0;
+  cursor: pointer;
 
   @media (max-width: 350px) {
     display: block;
